IO struct for sfml (input-output) coordination

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,5 @@ FetchContent_declare(
 )
 FetchContent_MakeAvailable(sfml)
 
-add_executable(Tetris main.cpp pieces.cpp board.cpp game.cpp)
+add_executable(Tetris main.cpp pieces.cpp board.cpp game.cpp IO.cpp)
 target_link_libraries(Tetris sfml-system sfml-window sfml-graphics)
