--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,45 @@
-cmake_minimum_required(VERSION 3.28)
-project(Tetris)
+cmake_minimum_required(VERSION 3.11) # FetchContent is available in 3.11+
+project(example)
 
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
-include(FetchContent)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-FetchContent_declare(
-        sfml
-        GIT_REPOSITORY https://github.com/SFML/SFML
-        GIT_TAG 2.6.1
-)
-FetchContent_MakeAvailable(sfml)
+# Generate compile_commands.json
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(Tetris main.cpp)
-target_link_libraries(Tetris sfml-system sfml-window sfml-graphics)
+# Dependencies
+set(RAYLIB_VERSION 4.2.0) # Update to the correct version
+find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
+if (NOT raylib_FOUND) # If there's none, fetch and build raylib
+    include(FetchContent)
+    FetchContent_Declare(
+            raylib
+            DOWNLOAD_EXTRACT_TIMESTAMP OFF
+            URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
+    )
+    FetchContent_GetProperties(raylib)
+    if (NOT raylib_POPULATED) # Have we downloaded raylib yet?
+        set(FETCHCONTENT_QUIET NO)
+        FetchContent_Populate(raylib)
+        set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
+        add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
+    endif()
+endif()
+
+# Our Project
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} raylib)
+
+# Web Configurations
+if(DEFINED PLATFORM AND "${PLATFORM}" STREQUAL "Web")
+    # Tell Emscripten to build an example.html file.
+    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
+endif()
+
+# Checks if OSX and links appropriate frameworks (Only required on MacOS)
+if(APPLE)
+    target_link_libraries(${PROJECT_NAME} "-framework IOKit")
+    target_link_libraries(${PROJECT_NAME} "-framework Cocoa")
+    target_link_libraries(${PROJECT_NAME} "-framework OpenGL")
+endif()
